syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "model/model.proto";

option go_package = "github.com/duc-cnzj/execit-client/file;file";

message FileDeleteRequest {
  int64 id = 1 [(validate.rules).int64.gte = 1];
}

message FileDeleteResponse {
  File file = 1;
}

message DeleteUndocumentedFilesRequest {}

message File {
  string path = 1;
  string humanize_size = 2;
  int64 size = 3;
  string upload_by = 4;
}

message DeleteUndocumentedFilesResponse {
  repeated File items = 1;
}

message DiskInfoRequest {}

message DiskInfoResponse {
  int64 usage = 1;
  string humanize_usage = 2;
}

message FileListRequest {
  int64 page = 1 [(validate.rules).int64.gte = 1];
  int64 page_size = 2 [(validate.rules).int64.gte = 1];
  bool without_deleted = 3;
}

message FileListResponse{
  int64 page = 1;
  int64 page_size = 2;
  repeated FileModel items = 3;
  int64 count = 4;
}

service FileSvc {
  //  文件列表
  rpc List(FileListRequest) returns (FileListResponse) {
    option (google.api.http) = {
      get: "/api/files",
    };
  }

  //  删除文件
  rpc Delete(FileDeleteRequest) returns (FileDeleteResponse) {
    option (google.api.http) = {
      delete: "/api/files/{id}",
    };
  }

  //  DeleteUndocumentedFiles 删除未被记录的文件，model 表中没有，但是文件目录中有
  rpc DeleteUndocumentedFiles(DeleteUndocumentedFilesRequest) returns(DeleteUndocumentedFilesResponse) {
    option (google.api.http) = {
      delete: "/api/files/delete_undocumented_files",
    };
  }

  // DiskInfo 查看上传文件目录大小
  rpc DiskInfo(DiskInfoRequest) returns (DiskInfoResponse) {
    option (google.api.http) = {
      get: "/api/files/disk_info",
    };
  }
}
